force-app/main/default/objects/COMM_PortalValidationSetting__mdt/COMM_PortalValidationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store validation values used on the Community Sites (ex: Change Email link expiration and url).</description>
    <label>Portal Validation Setting</label>
    <pluralLabel>Portal Validation Settings</pluralLabel>
</CustomObject>