force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_Community__c.field-meta.xml
<CustomField>
    <fullName>COMM_Community__c</fullName>
    <description>Community that the Setting is connected to</description>
    <label>Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>