force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_EnvironmentCustomersUrl__c.field-meta.xml
<CustomField>
    <fullName>COMM_EnvironmentCustomersUrl__c</fullName>
    <description>Customers site URL</description>
    <label>Environment Cutomers Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>