force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_EnvironmentId__c.field-meta.xml
<CustomField>
    <fullName>COMM_EnvironmentId__c</fullName>
    <description>Stores the id of the Environment</description>
    <label>Environment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>