force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_EnvironmentLinkExpirationTermLenght__c.field-meta.xml
<CustomField>
    <fullName>COMM_EnvironmentLinkExpirationTermLenght__c</fullName>
    <description>Stores how many days the registration email validation link will be available for</description>
    <label>Environment Link Expiration Term Lenght</label>
    <length>255</length>
    <type>Text</type>
</CustomField>