force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_EnvironmentSelfRegPageLabel__c.field-meta.xml
<CustomField>
    <fullName>COMM_EnvironmentSelfRegPageLabel__c</fullName>
    <description>Stores the Self Registration Page Label</description>
    <label>Environment Self Registration Page Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>