force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_ExpirationTimeHours__c.field-meta.xml
<CustomField>
    <fullName>COMM_ExpirationTimeHours__c</fullName>
    <description>Number of hours the Link Generated is Valid for use</description>
    <label>Expiration Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>