force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_MaxPasswordRetrievals__c.field-meta.xml
<CustomField>
    <fullName>COMM_MaxPasswordRetrievals__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum allowed password retrieval requests</description>
    <label>Max Password Retrievals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>