force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_PasswordRetrievalWindow__c.field-meta.xml
<CustomField>
    <fullName>COMM_PasswordRetrievalWindow__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Time window in minutes</description>
    <label>Password Retrieval Windows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>