force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_Process__c.field-meta.xml
<CustomField>
    <fullName>COMM_Process__c</fullName>
    <description>Process associated with the Validation Setting</description>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>