force-app/main/default/objects/COMM_PortalValidationSetting__mdt/fields/COMM_ValidationPageURL__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidationPageURL__c</fullName>
    <description>Link to the Page that User&apos;s will be directed that will perform validation</description>
    <label>Validation Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>