force-app/main/default/objects/COMM_PortalValidationSetting__mdt/listViews/COMM_LV_All.listView-meta.xml
<ListView>
    <fullName>COMM_LV_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>COMM_ExpirationTimeHours__c</columns>
    <columns>COMM_ValidationPageURL__c</columns>
    <columns>COMM_Community__c</columns>
    <columns>COMM_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>